fixing page title and tab names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="sakura.css"/>
-  <title>Markdown Greek reader</title>
+  <title>Greek Pronunciation Tutor</title>
   <style>
     .tab {
       overflow: hidden;
@@ -53,8 +53,8 @@
   <p>&nbsp;</p>
 
 <div class="tab">
-  <button class="tablinks active" onclick="openTab(this, 'Markdown')">Markdown</button>
-  <button class="tablinks" onclick="openTab(this, 'HTML')">HTML</button>
+  <button class="tablinks active" onclick="openTab(this, 'Markdown')">Enter Text</button>
+  <button class="tablinks" onclick="openTab(this, 'HTML')">Tutor</button>
 </div>
 
 <div id="Markdown" class="tabcontent">
