--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <h2>Paste your text here</h2>
   <textarea id="markdown-input" rows="10"></textarea>
   <br>
-  <button onclick="convertMarkdown()">GenerateL</button>
+  <button onclick="convertMarkdown()">Generate</button>
 </div>
 
 <div id="HTML" class="tabcontent">
